--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-tactile
 title: [Lei Shu]
-description: [A Ph.D. student in CS at University of Illinois at Chicago ]
+description: [University of Illinois at Chicago]
+show_downloads: [true]
