--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-cayman
 title: [Lei Shu]
 description: [University of Illinois at Chicago]
 show_downloads: [true]
